# parrot-test

./: README.md  main.py  pyproject.toml
app/: main.py
app/models/: request_models.py
app/routers/: chat.py
app/services/: openai_service.py
app/utils/: env_loader.py
